<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#fff"
     android:windowTitleBackgroundStyle="@style/Titleground"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3mm" >

        <TextView
            android:id="@+id/TextView01"
            style="@style/item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <RadioGroup
            android:id="@+id/RadioGroup01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="3px"
            android:layout_y="54px"
            android:orientation="vertical"
            android:textColor="@color/black" >

            <RadioButton
                android:id="@+id/RadioButton1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@android:drawable/btn_radio"
                android:paddingLeft="10dip"
                android:text="@string/RadioButton1"
                android:textColor="@drawable/radio_button"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/RadioButton2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:drawableLeft="@android:drawable/btn_radio"
                android:paddingLeft="10dip"
                android:text="@string/RadioButton2"
                android:textColor="@drawable/radio_button"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/RadioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:drawableLeft="@android:drawable/btn_radio"
                android:paddingLeft="10dip"
                android:text="@string/RadioButton3"
                android:textColor="@drawable/radio_button"
                android:textSize="20dp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3mm" >

        <TextView
            android:id="@+id/stateview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/timeview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3mm" >

        <Button
            android:id="@+id/connect"
            style="@style/item"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:text="@string/connect"
            android:textSize="20dp" />

        <Button
            android:id="@+id/disconnect"
            style="@style/item"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_background"
            android:text="@string/disconnect"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>